--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     </ul>
     
     <nav>
+      <input type="checkbox" class="nav-check" id="nav-check">
+      <label class="nav-label" for="nav-check">
+        <img class="nav-open" src="images/hamburger.svg" alt="Open Navigation">
+        <img class="nav-close" src="images/hamburger-close.svg" alt="Close Navigation">
+      </label>
       <ul class="nav">
         <li><a href="#">Info</a></li>
         <li><a href="#">Portfolio</a></li>
