--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <img class="nav-close" src="images/hamburger-close.svg" alt="Close Navigation">
           </label>
           <ul class="nav">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="info.html">Info</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </nav>
       </div>
