--- a/info.html
+++ b/info.html
@@ -33,6 +33,11 @@
     <div>
       <img src="images/flowers.jpg" class="myface">
     </div>
+    
+    <div>
+      <h3>Why I do what I do</h3>
+      <p class="info infoinfo">I have an immense passion for art and design and using that passion to help people with their businesses and brands. I specialize in print media (posters, album covers, magazines, and more) and logo design. I always put the needs of my clients first then add a little but of my clean cut but edgy style into it as well.</p>
+    </div>
 
   </body>
   </html>
