--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <img class="nav-close" src="images/hamburger-close.svg" alt="Close Navigation">
           </label>
           <ul class="nav">
+            <li><a href="index.html">Home</a></li>
             <li><a href="info.html">Info</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
