--- a/portfolio.html
+++ b/portfolio.html
@@ -12,4 +12,15 @@
       <meta name="viewport" content="width=device-width,initial-scale=1">    
   </head>
   
-  
+    <nav>
+      <input type="checkbox" class="nav-check" id="nav-check">
+      <label class="nav-label" for="nav-check">
+        <img class="nav-open" src="images/hamburger.svg" alt="Open Navigation">
+        <img class="nav-close" src="images/hamburger-close.svg" alt="Close Navigation">
+      </label>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="info.html">Info</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+      </ul>
+    </nav>
