--- a/portfolio.html
+++ b/portfolio.html
@@ -24,3 +24,79 @@
         <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
+  
+    <div class="grid port-squares">
+    
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
+      <figure>
+        <img class="port-box" src="http://placehold.it/480x480" alt="portfolio-piece">
+        <figcaption class="port-text">TITLE/DESCRIPTION</figcaption>
+      </figure>
+    </div>
+  </div>
