--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="grid">  
       <div class="header unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3">
-        <div>
+        <div class="headername">
           <h1>Jess Paget</h1>
         </div>
        
