--- a/info.html
+++ b/info.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     
-    <div class="grid">
+    <div class="grid main">
       <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3">
         <div>
           <img src="images/flowers.jpg" class="myface">
