Fixing some spacing issues with the info paragraph.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <div class="header headerlarge unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3"> 
         <div class="socialmedia">
-          <a href="https://instagram.com/radical.juice" class="icon instagram"></a>
-          <a href="https://www.behance.net/jessoleigh" class="icon behance"></a>
-          <a href="http://www.hazyleigh.tumblr.com" class="icon tumblr"></a>
-          <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" class="icon linkedin"></a>
+          <a href="https://instagram.com/radical.juice" title="instagram icon" class="icon instagram"></a>
+          <a href="https://www.behance.net/jessoleigh" title="behance icon" class="icon behance"></a>
+          <a href="http://www.hazyleigh.tumblr.com" title="tumblr icon" class="icon tumblr"></a>
+          <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" title="linkedin icon" class="icon linkedin"></a>
         </div>
 
         <nav>
@@ -51,35 +51,35 @@
     <div id="galleryphotos" class="bodyimages">
       <div class="grid">
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/6.jpg" class="images">
+          <img src="images/6.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/12.jpg" class="images">
+          <img src="images/12.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/2.jpg" class="images">
+          <img src="images/2.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/4.jpg" class="images">
+          <img src="images/4.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/0.jpg" class="images">
+          <img src="images/0.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/7.jpg" class="images">
+          <img src="images/7.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/11.jpg" class="images">
+          <img src="images/11.jpg" alt="Page One Photo" class="images">
         </div>
         <div class="photofp img-flex unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-4">
-          <img src="images/13.jpg" class="images">
+          <img src="images/13.jpg" alt="Page One Photo" class="images">
         </div>
       </div>
     </div>
 
     
     <footer class="footer">
-      <p>© Jess Paget</p>
+      <p>© Jess Paget 2015</p>
     </footer>
     
   </body> 
