--- a/info.html
+++ b/info.html
@@ -44,20 +44,20 @@
     <div class="grid main">
       <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3">
         <div>
-          <img src="images/flowers.jpg" class="myface">
+          <img src="images/flowers.jpg" alt="self portrait" class="myface">
         </div>
       </div>
       
       <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3">
         <div class="infopage">
           <h3>Why I do what I do</h3>
-          <p class="info infoinfo ">I have an immense passion for art and design and using that passion to help people with their businesses and brands. I specialize in print media (posters, album covers, magazines, and more) and logo design. I always put the needs of my clients first then add a little but of my clean cut but edgy style into it as well.</p>
+          <p class="info infoinfo ">I have an immense passion for art and design and using that passion to help people with their businesses and brands. I specialize in print media (posters, album covers, magazines, and more) and logo design. I always put the needs of my clients first then add a little bit of my clean cut but edgy style into it as well.</p>
         </div>
       </div>
     </div>
 
     <footer class="footer">
-      <p>© Jess Paget</p>
+      <p>© Jess Paget 2015</p>
     </footer>
   
   </body>
