Added skip links to all of my pages and an add to top button in nav for all of my pages as well.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
     
     <div class="grid">  
-      <div class="header unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3">
+      <div class="header unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3" id="top">
         <div class="headername">
           <h1>Jess Paget</h1>
         </div>
@@ -85,7 +85,7 @@
     </main>
 
     <footer class="footer" id="footer">
-      <p>© Jess Paget 2015</p>
+      <p>© Jess Paget 2015 <a href="#top" class="footera">(^)</a></p>
     </footer>
     
   </body> 
