Added social media icons on footer for pages that don’t have them in the header.

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,6 +109,12 @@
     
   <footer class="footer" id="footer">
     <p>© Jess Paget 2015 <a href="#top" class="footera">(^)</a></p>
+    <div class="socialmediafooter">
+      <a href="https://instagram.com/radical.juice" title="instagram icon" class="icon instagramfooter"></a>
+      <a href="https://www.behance.net/jessoleigh" title="behance icon" class="icon behancefooter"></a>
+      <a href="http://www.hazyleigh.tumblr.com" title="tumblr icon" class="icon tumblrfooter"></a>
+      <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" title="linkedin icon" class="icon linkedinfooter"></a>
+    </div>
   </footer>
     
 </body>
