--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
     </ul>
     
     <div class="grid">  
-      <div class="header unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3" id="top"> 
+      <div class="header unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3" id="top" role="banner"> 
         <div class="headername">
           <h1>Jess Paget</h1>
         </div>
@@ -33,7 +33,7 @@
       </div>
 
     <div class="header headerlarge unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3"> 
-        <nav id="nav">
+        <nav id="nav" role="navigation">
           <input type="checkbox" class="nav-check" id="nav-check">
           <label class="nav-label" for="nav-check">
             <img class="nav-open" src="images/hamburger.svg" alt="Open Navigation">
@@ -48,7 +48,7 @@
       </div>
     </div>
     
-    <main id="main">
+    <main id="main" role="main">
       <div class="grid main">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3">
           <div>
@@ -67,7 +67,7 @@
       </div>
     </main>
 
-    <footer class="footer" id="footer">
+    <footer class="footer" id="footer" role="complementaryinfo">
       <p>© Jess Paget 2015 <a href="#top" class="footera">(^)</a></p>
       <div class="socialmediafooter">
         <a href="https://instagram.com/radical.juice" title="instagram icon" class="icon instagramfooter"></a>
@@ -76,6 +76,5 @@
         <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" title="linkedin icon" class="icon linkedinfooter"></a>
       </div>
     </footer>
-  
   </body>
   </html>
