Small tweaks with nav spacing for large screen.

--- a/index.html
+++ b/index.html
@@ -26,18 +26,11 @@
        
         <ul class="info">
           <li>Ottawa based graphic designer</li>
-          <li>613.314.9753 | hey@jesspaget.ca</li>
+          <li>613 314 9753 | hey@jesspaget.ca</li>
         </ul>
       </div>
 
     <div class="header headerlarge unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3"> 
-        <div class="socialmedia">
-          <a href="https://instagram.com/radical.juice" title="instagram icon" class="icon instagram"></a>
-          <a href="https://www.behance.net/jessoleigh" title="behance icon" class="icon behance"></a>
-          <a href="http://www.hazyleigh.tumblr.com" title="tumblr icon" class="icon tumblr"></a>
-          <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" title="linkedin icon" class="icon linkedin"></a>
-        </div>
-
         <nav id="nav" role="navigation">
           <input type="checkbox" class="nav-check" id="nav-check">
           <label class="nav-label" for="nav-check">
@@ -84,9 +77,14 @@
       </div>
     </main>
 
-    <footer class="footer" id="footer" role="contentinfo">
+    <footer class="footer" id="footer" role="complementaryinfo">
       <p>© Jess Paget 2015 <a href="#top" class="footera">(^)</a></p>
+      <div class="socialmediafooter">
+        <a href="https://instagram.com/radical.juice" title="instagram icon" class="icon instagramfooter"></a>
+        <a href="https://www.behance.net/jessoleigh" title="behance icon" class="icon behancefooter"></a>
+        <a href="http://www.hazyleigh.tumblr.com" title="tumblr icon" class="icon tumblrfooter"></a>
+        <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" title="linkedin icon" class="icon linkedinfooter"></a>
+      </div>
     </footer>
-    
   </body> 
   </html>
