--- a/info.html
+++ b/info.html
@@ -28,7 +28,7 @@
        
         <ul class="info">
           <li>Ottawa based graphic designer</li>
-          <li>613.314.9753 | hey@jesspaget.ca</li>
+          <li>613 314 9753 | hey@jesspaget.ca</li>
         </ul>
       </div>
 
