Created _config.yml file and added the lines of text needed

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
         <a href="#portfolio-work" class="unit exit">
           <p>x</p>
         </a>
-        <div>
+        <div class="unit text">
           <h3 class="unit portfolio-title">Font Specimine Poster</h3>
           <p class="unit">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
           <img src="http://placehold.it/350x350">
