--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@ layout: default
       <div class="grid main">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3">
           <div>
-            <img src="images/flowers.jpg" alt="self portrait" class="myface">
+            <img src="images/portraitlight.jpg" alt="self portrait" class="myface">
           </div>
         </div>
 
