Got my portfolio slide out pages to work (mostly) and styled in CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,59 +5,32 @@ layout: default
   <section>
     <main id="main" role="main">
       <div class="grid port-squares">
-      <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure class="item">
+      <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2 item">
           <a href="#portfolio-piece-1"><img class="port-box" src="images/fspecimine.jpg" alt="portfolio-piece-one"></a>
-          <figcaption class="port-text">Font Specimine Poster</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/mag5.jpg" alt="portfolio-piece-two">
-          <figcaption class="port-text">Magazine Spread</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/oldjames.jpg" alt="portfolio-piece-three">
-          <figcaption class="port-text">Old James Logo</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/poster5.jpg" alt="portfolio-piece-four">
-          <figcaption class="port-text">Poster</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/ragtime.jpg" alt="portfolio-piece-five">
-          <figcaption class="port-text">Ragtime Logo</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/suburbs.png" alt="portfolio-piece-six">
-          <figcaption class="port-text">Suburbs Poster</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/tapestry.jpg" alt="portfolio-piece-seven">
-          <figcaption class="port-text">Tapestry</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/album.jpg" alt="portfolio-piece-eight">
-          <figcaption class="port-text">Mock Album Cover</figcaption>
-        </figure>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-1-2">
-        <figure>
           <img class="port-box" src="images/businesscard.jpg" alt="portfolio-piece-nine">
-          <figcaption class="port-text">Business Cards</figcaption>
-        </figure>
       </div>
     </div>
       
