--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@ layout: default
             <h3>Why I do what I do</h3>
             <p class="info infoinfo">I have an immense passion for art and design and using that passion to help people with their businesses and brands. I specialize in print media (posters, album covers, magazines, and more) and logo design. I always put the needs of my clients first then add a little bit of my clean cut but edgy style into it as well.</p>
             <p class="info infoinfo infoemail">Get in touch! <i>hey@jesspaget.ca</i></p>
-            <p class="info infoinfo infoemail">Other contact info below</p>
+            <p class="info infoinfo infoemail">social media links below</p>
           </div>
         </div>
       </div>
