Adding more content and replacing lorem ipsom with actual text.

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@ layout: default
     <main id="main" role="main">
       <div class="grid port-squares">
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-          <a href="#portfolio-piece-1"><img class="port-box" src="images/fspecimine.jpg" alt="portfolio-piece-one"></a>
+          <a href="#portfolio-piece-1"><img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="portfolio-piece-one"></a>
       </div>
       <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
           <a href="#portfolio-piece-2"><img class="port-box" src="images/mag5.jpg" alt="portfolio-piece-two"></a>
@@ -41,11 +41,20 @@ layout: default
           <p>↩</p>
         </a>
         <div class="unit text">
-          <h3 class="unit portfolio-title">Font Specimine Poster</h3>
-          <p class="unit portfoliotext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-          <img src="http://placehold.it/350x350" class="portimages">
-          <img src="http://placehold.it/350x350" class="portimages">
-          <img src="http://placehold.it/350x350" class="portimages">
+          <h3 class="unit portfolio-title">Font Creation // Digital Curve</h3>
+          <p class="unit portfoliotext">Created a font using Adobe Illustrator then brought into Glyphs to render that into a usable font. </p>
+          <p class="portfoliosubheads">-- The Sketches</p>
+          <img src="images/fontspecimine/sketches1.jpg" class="portimages">
+          <img src="images/fontspecimine/sketches2.jpg" class="portimages">
+          <img src="images/fontspecimine/sketches3.jpg" class="portimages">
+          <p class="portfoliosubheads">-- The Font</p>
+          <img src="images/fontspecimine/caps.jpg" class="portimages">
+          <img src="images/fontspecimine/lower.jpg" class="portimages">
+          <img src="images/fontspecimine/numbers.jpg" class="portimages">
+          <p class="portfoliosubheads">-- The Application</p>
+          <img src="images/fontspecimine/fspecimine.jpg" class="portimages">
+          <img src="images/fontspecimine/fspec2.jpg" class="portimages">
+          <img src="images/fontspecimine/fspec3.jpg" class="portimages">
         </div>
       </div>
             
