Added two photography pieces to portfolio page.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@ layout: default
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-9"><img class="port-box" src="images/album.jpg" alt="portfolio-piece-nine"></a>
         </div>
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
+            <a href="#portfolio-piece-9"><img class="port-box" src="images/haunt/cover.jpg" alt="portfolio-piece-ten"></a>
+        </div>
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
+            <a href="#portfolio-piece-9"><img class="port-box" src="images/nature/cover.jpg" alt="portfolio-piece-ten"></a>
+        </div>
       </div>
     </main>
   </section>
