--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
             <a href="#portfolio-piece-3"><img class="port-box" src="images/wordmark/2.jpg" alt="portfolio-piece-three"></a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-4"><img class="port-box" src="images/poster5.jpg" alt="portfolio-piece-four"></a>
+            <a href="#portfolio-piece-4"><img class="port-box" src="images/albums/tameimpala.jpg" alt="portfolio-piece-four"></a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-5"><img class="port-box" src="images/ragtime.jpg" alt="portfolio-piece-five"></a>
@@ -37,6 +37,9 @@ layout: default
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-9"><img class="port-box" src="images/nature/cover.jpg" alt="portfolio-piece-ten"></a>
+        </div>
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
+            <a href="#portfolio-piece-9"><img class="port-box" src="images/poster5.jpg" alt="portfolio-piece-ten"></a>
         </div>
       </div>
     </main>
@@ -108,10 +111,52 @@ layout: default
         </a>
         <div class="unit text">
           <h3 class="unit portfolio-title">Wordmark</h3>
-          <img src="images/wordmark/sketches1.jpg" class="portimages">
-          <img src="images/wordmark/sketches2.jpg" class="portimages">
-          <img src="images/wordmark/sketches3.jpg" class="portimages">
-          <img src="images/wordmark/wordmark2.jpg" class="portimages">
+          <div class="portfoliocontent">
+            <div class="grid">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/wordmark/sketches1.jpg" class="portimages">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/wordmark/sketches2.jpg" class="portimages">
+              </div>
+            </div>
+            <div class="grid">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/wordmark/sketches3.jpg" class="portimages">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/wordmark/wordmark2.jpg" class="portimages">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-6">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+          <h3 class="unit portfolio-title">Old James</h3>
+          <div class="portfoliocontent">
+            <div class="grid">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/oldjames/oldj1.jpg" class="portimages">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/oldjames/oldj2.jpg" class="portimages">
+              </div>
+            </div>
+            <div class="grid">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/oldjames/oldj3.jpg" class="portimages">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/oldjames/oldj4.jpg" class="portimages">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
   
