Working on hover state for portfolio pieces.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@ layout: default
     <main id="main" role="main">
       <div class="grid port-squares">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-1"><img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="portfolio-piece-one"></a>
+            <a href="#portfolio-piece-1" class="hover-box">
+              <img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="portfolio-piece-one">
+              <p>Print Design</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-2"><img class="port-box" src="images/mag5.jpg" alt="portfolio-piece-two"></a>
@@ -52,7 +55,7 @@ layout: default
         </a>
         <div class="text">
           <div class="portfolio-title-div">
-            <h3 class="portfolio-title">Font Creation // Digital Curve</h3>
+            <h3 class="portfolio-title">Digital Curve : Font Creation</h3>
           </div>
           <p class="portfoliosubheads">-- The Sketches</p>
           <div class="grid">
