--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-1" class="hover-box">
               <img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="portfolio-piece-one">
-              <p>Print Design</p>
+              <p class="printdesign">Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
