Added all portfolio covers and rearranged them by preference. Added hover box to all of them and starting to add content to light box pages.

--- a/index.html
+++ b/index.html
@@ -8,41 +8,56 @@ layout: default
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
             <a href="#portfolio-piece-1" class="hover-box">
               <img class="port-box" src="images/fontspecimine/fspecimine.jpg" alt="portfolio-piece-one">
-              <p class="printdesign">Print Design</p>
+              <p>Print Design</p>
             </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-2"><img class="port-box" src="images/mag5.jpg" alt="portfolio-piece-two"></a>
+            <a href="#portfolio-piece-2" class="hover-box">
+              <img class="port-box" src="images/oldjames.jpg" alt="portfolio-piece-two">
+              <p>Branding</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-3"><img class="port-box" src="images/wordmark/2.jpg" alt="portfolio-piece-three"></a>
+            <a href="#portfolio-piece-3" class="hover-box">
+              <img class="port-box" src="images/albums/tameimpala.jpg" alt="portfolio-piece-three">
+              <p>Print Design</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-4"><img class="port-box" src="images/albums/tameimpala.jpg" alt="portfolio-piece-four"></a>
+            <a href="#portfolio-piece-4" class="hover-box">
+              <img class="port-box" src="images/liquidhappiness/cover.jpg" alt="portfolio-piece-four">
+              <p>Branding</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-5"><img class="port-box" src="images/ragtime.jpg" alt="portfolio-piece-five"></a>
+            <a href="#portfolio-piece-5" class="hover-box">
+              <img class="port-box" src="images/haunt/cover.jpg" alt="portfolio-piece-five">
+              <p>Photography</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-6"><img class="port-box" src="images/oldjames.jpg" alt="portfolio-piece-six"></a>
+            <a href="#portfolio-piece-6" class="hover-box">
+              <img class="port-box" src="images/nature/cover.jpg" alt="portfolio-piece-six">
+              <p>Photography</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-7"><img class="port-box" src="images/suburbs.png" alt="portfolio-piece-seven"></a>
+            <a href="#portfolio-piece-7" class="hover-box">
+              <img class="port-box" src="images/poster5.jpg" alt="portfolio-piece-seven">
+              <p>Print Design</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-8"><img class="port-box" src="images/tapestry.jpg" alt="portfolio-piece-eight"></a>
+            <a href="#portfolio-piece-8" class="hover-box">
+              <img class="port-box" src="images/mag5.jpg" alt="portfolio-piece-eight">
+              <p>Print Design</p>
+            </a>
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-9"><img class="port-box" src="images/album.jpg" alt="portfolio-piece-nine"></a>
-        </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-9"><img class="port-box" src="images/haunt/cover.jpg" alt="portfolio-piece-ten"></a>
-        </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-9"><img class="port-box" src="images/nature/cover.jpg" alt="portfolio-piece-ten"></a>
-        </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island-1-2 item">
-            <a href="#portfolio-piece-9"><img class="port-box" src="images/poster5.jpg" alt="portfolio-piece-ten"></a>
+            <a href="#portfolio-piece-9" class="hover-box">
+              <img class="port-box" src="images/ragtime.jpg" alt="portfolio-piece-nine">
+              <p>Branding</p>
+            </a>
         </div>
       </div>
     </main>
@@ -95,47 +110,8 @@ layout: default
           </div>
         </div>
       </div>
-            
-      <div class=" portfolio-slide-open" id="portfolio-piece-2">
-        <a href="#portfolio-work" class="unit exit">
-          <p>↩</p>
-        </a>
-        <div class="unit text">
-          <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
-          <img src="http://placehold.it/350x350" class="portimages">
-          <img src="http://placehold.it/350x350" class="portimages">
-          <img src="http://placehold.it/350x350" class="portimages">
-        </div>
-      </div>
-      
-      <div class=" portfolio-slide-open" id="portfolio-piece-3">
-        <a href="#portfolio-work" class="unit exit">
-          <p>↩</p>
-        </a>
-        <div class="unit text">
-          <h3 class="unit portfolio-title">Wordmark</h3>
-          <div class="portfoliocontent">
-            <div class="grid">
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/wordmark/sketches1.jpg" class="portimages">
-              </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/wordmark/sketches2.jpg" class="portimages">
-              </div>
-            </div>
-            <div class="grid">
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/wordmark/sketches3.jpg" class="portimages">
-              </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/wordmark/wordmark2.jpg" class="portimages">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class=" portfolio-slide-open" id="portfolio-piece-6">
+      <div class=" portfolio-slide-open" id="portfolio-piece-2">
         <a href="#portfolio-work" class="unit exit">
           <p>↩</p>
         </a>
@@ -159,6 +135,62 @@ layout: default
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-3">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+          <h3 class="unit portfolio-title">Album Artwork Re-Creation</h3>
+            <div class="portfoliocontent">
+              <img src="images/spreads/spread1.jpg" class="portimages">
+              <img src="images/spreads/spread2.jpg" class="portimages">
+              <img src="images/spreads/spread3.jpg" class="portimages">
+              <img src="images/spreads/spread4.jpg" class="portimages">
+              <img src="images/spreads/spread5.jpg" class="portimages">
+              <img src="images/spreads/spread6.jpg" class="portimages">
+              <img src="images/spreads/spread7.jpg" class="portimages">
+              <img src="images/spreads/spread8.jpg" class="portimages">
+            </div>
+        </div>
+      </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-8">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+          <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread2.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread3.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread4.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread5.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread6.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread7.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/spread8.jpg" class="portimages">
+                </div>
+                </div>
+            </div>
         </div>
       </div>
 
