Deleting photos out of my ‘Images’ folder I no longer need and adding more content to lightbox pages.

--- a/index.html
+++ b/index.html
@@ -145,14 +145,131 @@ layout: default
         <div class="unit text">
           <h3 class="unit portfolio-title">Album Artwork Re-Creation</h3>
             <div class="portfoliocontent">
-              <img src="images/spreads/spread1.jpg" class="portimages">
-              <img src="images/spreads/spread2.jpg" class="portimages">
-              <img src="images/spreads/spread3.jpg" class="portimages">
-              <img src="images/spreads/spread4.jpg" class="portimages">
-              <img src="images/spreads/spread5.jpg" class="portimages">
-              <img src="images/spreads/spread6.jpg" class="portimages">
-              <img src="images/spreads/spread7.jpg" class="portimages">
-              <img src="images/spreads/spread8.jpg" class="portimages">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/albums/tameimpala.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/albums/glassanimals.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/albums/jonimitchell.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/albums/af-1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/albums/timbertimbre.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/albums/trunk.jpg" class="portimages">
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-4">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+          <h3 class="unit portfolio-title">Wine Bottle Brand</h3>
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/sketches-1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/mockups.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/final.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/final.jpg" class="portimages">
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-5">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+          <h3 class="unit portfolio-title">Haunt : Photography</h3>
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/haunt/haunt1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/haunt/haunt2.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/haunt/haunt3.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/haunt/haunt4.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/haunt/haunt5.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/haunt/haunt6.jpg" class="portimages">
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div class=" portfolio-slide-open" id="portfolio-piece-6">
+        <a href="#portfolio-work" class="unit exit">
+          <p>↩</p>
+        </a>
+        <div class="unit text">
+          <h3 class="unit portfolio-title">Nature : Photography</h3>
+            <div class="portfoliocontent">
+              <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature1.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature2.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature3.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature4.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature5.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature6.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature7.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature8.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature9.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature10.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature11.jpg" class="portimages">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/nature/nature12.jpg" class="portimages">
+                </div>
+              </div>
             </div>
         </div>
       </div>
